--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "nodemon app.js"
+
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "eslint": "^5.5.0",
-    "mongoose": "^5.2.13"
+    "express": "^4.16.3",
+    "mongoose": "^5.2.13",
+    "body-parser": "^1.18.3",
+    "morgan": "^1.9.0"
   }
 }
